--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
+    "cookies-next": "^5.1.0",
+    "dotenv": "^16.4.7",
     "js-cookie": "^3.0.5",
     "mysql2": "^3.12.0",
     "next": "15.1.6",
@@ -19,7 +21,8 @@
     "react-cookie": "^7.2.2",
     "react-dom": "^19.0.0",
     "react-router": "^7.1.5",
-    "react-router-dom": "^7.1.5"
+    "react-router-dom": "^7.1.5",
+    "styled-components": "^6.1.15"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
