--- a/package.json
+++ b/package.json
@@ -15,16 +15,19 @@
     "bcryptjs": "^2.4.3",
     "cookies-next": "^5.1.0",
     "dotenv": "^16.4.7",
+    "dynamsoft-camera-enhancer": "^3.3.1",
+    "dynamsoft-javascript-barcode": "^9.6.11",
     "html5-qrcode": "^2.3.8",
     "js-cookie": "^3.0.5",
     "mysql2": "^3.12.0",
     "next": "15.1.6",
     "nookies": "^2.5.2",
     "quagga": "^0.12.1",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-barcode-reader": "^0.0.2",
     "react-cookie": "^7.2.2",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.3.1",
+    "react-qr-barcode-scanner": "^2.0.0",
     "react-router": "^7.1.5",
     "react-router-dom": "^7.1.5",
     "react-webcam": "^7.2.0",
