--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "cookies-next": "^5.1.0",
+    "date-fns-tz": "^3.2.0",
     "dotenv": "^16.4.7",
     "dynamsoft-camera-enhancer": "^3.3.1",
     "dynamsoft-javascript-barcode": "^9.6.11",
